fix feedback margin on mobile device

--- a/src/components/Feedback/Feedback.module.sass
+++ b/src/components/Feedback/Feedback.module.sass
@@ -55,6 +55,7 @@
                     width: 100%
                     align-items: center
                     padding: 0
+                    margin: 0
                     .feedbackUnit
                         margin: 5px 0
                         width: 90%
